--- a/raft/orderer/configtx/configtx.yaml
+++ b/raft/orderer/configtx/configtx.yaml
@@ -19,7 +19,7 @@ Organizations:
         ID: OrdererMSP
 
         # MSPDir is the filesystem path which contains the MSP configuration
-        MSPDir: ./crypto-config-ca/ordererOrganizations/example.com/msp/
+        MSPDir: ../crypto-config-ca/ordererOrganizations/example.com/msp/
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -43,7 +43,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: Org1MSP
 
-        MSPDir: ../org1/crypto-config-ca/peerOrganizations/org1.example.com/msp
+        MSPDir: ../../org1/crypto-config-ca/peerOrganizations/org1.example.com/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -78,7 +78,7 @@ Organizations:
         # ID to load the MSP definition as
         ID: Org2MSP
 
-        MSPDir: ../org2/crypto-config-ca/peerOrganizations/org2.example.com/msp
+        MSPDir: ../../org2/crypto-config-ca/peerOrganizations/org2.example.com/msp
 
         # Policies defines the set of policies at this level of the config tree
         # For organization policies, their canonical path is usually
@@ -212,8 +212,8 @@ Orderer: &OrdererDefaults
         Consenters:
         - Host: orderer.example.com
           Port: 7050
-          ClientTLSCert: ./crypto-config-ca/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
-          ServerTLSCert: ./crypto-config-ca/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+          ClientTLSCert: ../crypto-config-ca/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+          ServerTLSCert: ../crypto-config-ca/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
 
     Addresses:
         - orderer.example.com:7050
@@ -323,24 +323,24 @@ Profiles:
                 Consenters:
                 - Host: orderer.example.com
                   Port: 7050
-                  ClientTLSCert: ./crypto-config-ca/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
-                  ServerTLSCert: ./crypto-config-ca/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+                  ClientTLSCert: ../crypto-config-ca/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
+                  ServerTLSCert: ../crypto-config-ca/ordererOrganizations/example.com/orderers/orderer.example.com/tls/server.crt
                 - Host: orderer2.example.com
                   Port: 8050
-                  ClientTLSCert: ./crypto-config-ca/ordererOrganizations/example.com/orderers/orderer2.example.com/tls/server.crt
-                  ServerTLSCert: ./crypto-config-ca/ordererOrganizations/example.com/orderers/orderer2.example.com/tls/server.crt
+                  ClientTLSCert: ../crypto-config-ca/ordererOrganizations/example.com/orderers/orderer2.example.com/tls/server.crt
+                  ServerTLSCert: ../crypto-config-ca/ordererOrganizations/example.com/orderers/orderer2.example.com/tls/server.crt
                 - Host: orderer3.example.com
                   Port: 9050
-                  ClientTLSCert: ./crypto-config-ca/ordererOrganizations/example.com/orderers/orderer3.example.com/tls/server.crt
-                  ServerTLSCert: ./crypto-config-ca/ordererOrganizations/example.com/orderers/orderer3.example.com/tls/server.crt
+                  ClientTLSCert: ../crypto-config-ca/ordererOrganizations/example.com/orderers/orderer3.example.com/tls/server.crt
+                  ServerTLSCert: ../crypto-config-ca/ordererOrganizations/example.com/orderers/orderer3.example.com/tls/server.crt
                 - Host: orderer4.example.com
                   Port: 10050
-                  ClientTLSCert: ./crypto-config-ca/ordererOrganizations/example.com/orderers/orderer4.example.com/tls/server.crt
-                  ServerTLSCert: ./crypto-config-ca/ordererOrganizations/example.com/orderers/orderer4.example.com/tls/server.crt
+                  ClientTLSCert: ../crypto-config-ca/ordererOrganizations/example.com/orderers/orderer4.example.com/tls/server.crt
+                  ServerTLSCert: ../crypto-config-ca/ordererOrganizations/example.com/orderers/orderer4.example.com/tls/server.crt
                 - Host: orderer5.example.com
                   Port: 11050
-                  ClientTLSCert: ./crypto-config-ca/ordererOrganizations/example.com/orderers/orderer5.example.com/tls/server.crt
-                  ServerTLSCert: ./crypto-config-ca/ordererOrganizations/example.com/orderers/orderer5.example.com/tls/server.crt 
+                  ClientTLSCert: ../crypto-config-ca/ordererOrganizations/example.com/orderers/orderer5.example.com/tls/server.crt
+                  ServerTLSCert: ../crypto-config-ca/ordererOrganizations/example.com/orderers/orderer5.example.com/tls/server.crt 
             Addresses:
                 - orderer.example.com:7050
                 - orderer2.example.com:8050
