--- a/raft/orderer/docker-compose-orderer.yaml
+++ b/raft/orderer/docker-compose-orderer.yaml
@@ -121,6 +121,7 @@ services:
       - ./genesis.block:/var/hyperledger/orderer/orderer.genesis.block
       - ./crypto-config-ca/ordererOrganizations/example.com/orderers/orderer3.example.com/msp:/var/hyperledger/orderer/msp
       - ./crypto-config-ca/ordererOrganizations/example.com/orderers/orderer3.example.com/tls:/var/hyperledger/orderer/tls
+      - orderer3.example.com:/var/hyperledger/production/orderer
       - ./configtx:/etc/hyperledger/fabric
   
   orderer4.example.com:
